--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,8 @@ packages = ["src/arckit_cli"]
 
 [tool.hatch.build.targets.wheel.shared-data]
 ".claude" = "share/arckit/.claude"
+".codex" = "share/arckit/.codex"
 "scripts" = "share/arckit/scripts"
 ".gemini" = "share/arckit/.gemini"
 ".arckit" = "share/arckit/.arckit"
+"docs" = "share/arckit/docs"
